Re-apply top margin to drop cap, was having issues of it floating too high.

--- a/source/css/components/quire-page.scss
+++ b/source/css/components/quire-page.scss
@@ -337,6 +337,7 @@ html {
         &:first-letter {
           font-size: 9em;
           float: left;
+          margin-top: .1em;
           margin-left: -0.09em;
           padding-right: 0.025em;
           line-height: .85em;
