--- a/static/css/application.css
+++ b/static/css/application.css
@@ -7923,6 +7923,7 @@ html {
 .quire-page--splash .quire-page__content p:first-child:first-letter {
   font-size: 9em;
   float: left;
+  margin-top: .1em;
   margin-left: -0.09em;
   padding-right: 0.025em;
   line-height: .85em; }
